--- a/package.json
+++ b/package.json
@@ -5,5 +5,26 @@
   "main": "index.js",
   "repository": "git@github.com:TroyAlford/wiki-editor.git",
   "author": "Troy Alford <troy@troyalford.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-jest": "^19.0.0",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
+    "webpack": "^2.4.1"
+  },
+  "dependencies": {
+    "react": "^15.5.4"
+  }
 }
