--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     jest: true,
     node: true
   },
+  parser: "babel-eslint",
+  plugins: ["class-property"],
   rules: {
     "comma-dangle": [1, "always-multiline"],
     "key-spacing": ["error", { "align": "value" }],
