--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
+    "node-sass": "^4.5.2",
+    "node-sass-glob-importer": "^3.0.2",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "webpack": "^2.4.1"
   },
   "scripts": {
     "build": "yarn prebuild && NODE_ENV=production webpack",
+    "build-css": "node-sass src/wiki-editor.scss --output-style compressed --source-map true --source-map-embed --importer node_modules/node-sass-glob-importer/dist/cli.js -o lib",
     "prebuild": "mkdir -p ./lib && rm -rf ./lib/*",
+    "watch-css": "nodemon --watch ./src -e scss --exec 'yarn build-css'",
     "test": "jest"
   },
   "jest": {}
