--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.5.4",
-    "slate": "^0.19.20",
-    "slate-edit-table": "^0.9.0"
+    "slate": "^0.19.20"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
