--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.5.4",
-    "slate": "^0.19.20"
+    "slate": "^0.19.20",
+    "slate-auto-replace": "^0.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
