--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "Troy Alford <troy@troyalford.com>",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "slate": "^0.19.20",
     "slate-auto-replace": "^0.5.0"
   },
@@ -31,7 +33,6 @@
     "node-sass": "^4.5.2",
     "node-sass-glob-importer": "^3.0.2",
     "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
     "webpack": "^2.4.1"
   },
   "scripts": {
