--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,8 @@ machine:
   environment:
     PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
     NODE_ENV: production
+  node:
+    version: 6.9.1
   timezone:
     America/Los_Angeles
 
