--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "version": "0.0.1",
   "description": "React/Slate WYSIWYG Editor",
-  "main": "lib/wiki-editor.js",
+  "main": "lib/wiki-editor.min.js",
   "repository": "git@github.com:TroyAlford/wiki-editor.git",
   "author": "Troy Alford <troy@troyalford.com>",
   "license": "MIT",
