--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "node-sass": "^4.5.2",
     "node-sass-glob-importer": "^3.0.2",
     "nodemon": "^1.11.0",
+    "publish": "^0.6.0",
     "react-addons-test-utils": "^15.5.1",
     "webpack": "^2.6.1"
   },
   "scripts": {
+    "publish-to-npm": "publish",
     "build": "NODE_ENV=production webpack",
     "build-css": "node-sass src/wiki-editor.scss --output-style compressed --source-map true --source-map-embed --importer node_modules/node-sass-glob-importer/dist/cli.js -o lib",
     "prebuild": "mkdir -p ./lib ./examples/lib && rm -rf ./lib/* ./examples/lib/*",
