--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
     "immutable": "^3.8.1",
     "prettify-html": "TroyAlford/prettify-html",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "slate": "^0.20.3",
-    "slate-auto-replace": "^0.5.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "slate": "^0.30.6",
+    "slate-auto-replace": "^0.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-jest": "^20.0.3",
+    "babel-preset-jest": "^21.2.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.0.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "jest": "^20.0.4",
-    "jest-cli": "^20.0.4",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "jshint": "^2.9.5",
     "node-sass": "^4.5.2",
-    "node-sass-glob-importer": "^3.0.2",
+    "node-sass-glob-importer": "^5.0.0-alpha.16",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "publish": "^0.6.0",
