--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "semi": ["error", "never"],
 
     "import/no-unresolved": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
     "react/jsx-filename-extension": [1, { extensions: [".js"] }],
     "react/no-unused-prop-types": [1, { skipShapeProps: true }]
   }
