--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,6 @@
     "transform-class-properties",
     "transform-object-rest-spread"
   ],
-  "presets": [
-    "es2015",
-    "react",
-    "jest"
-  ],
+  "presets": ["env", "react", "jest"],
   "highlightCode": true
 }
