--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "cheerio": "^1.0.0-rc.1",
     "immutable": "^3.8.1",
     "prettify-html": "TroyAlford/prettify-html",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "slate": "^0.30.6",
     "slate-auto-replace": "^0.9.0",
+    "slate-html-serializer": "^0.4.6",
     "slate-react": "^0.10.11"
   },
   "devDependencies": {
@@ -30,7 +31,8 @@
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-jest": "^21.2.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.0.0",
@@ -58,7 +60,7 @@
     "publish-to-npm": "publish",
     "test": "jest",
     "version": "yarn build && git add -A ./lib",
-    "watch": "SOURCEMAP=true yarn prebuild && (yarn-watch-css & yarn webpack -- --watch)",
+    "watch": "SOURCEMAP=true yarn prebuild && (yarn-watch-css & yarn webpack --watch)",
     "watch-css": "nodemon --watch ./source -e scss --exec 'yarn build-css'"
   },
   "pre-commit": [
