--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
-    "immutable": "^3.8.1",
+    "immutable": "^3.8.2",
     "prettify-html": "TroyAlford/prettify-html",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "rollup-plugin-commonjs": "^8.2.6",
     "slate": "^0.30.6",
     "slate-auto-replace": "^0.9.0",
     "slate-html-serializer": "^0.4.6",
@@ -29,11 +30,13 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-jest": "^21.2.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.0.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -49,6 +52,11 @@
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "publish": "^0.6.0",
+    "rollup": "^0.51.3",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "source-map-explorer": "^1.5.0",
     "webpack": "^3.0.0"
   },
   "scripts": {
@@ -58,13 +66,13 @@
     "prebuild": "mkdir -p ./lib ./examples/lib && rm -rf ./lib/* ./examples/lib/*",
     "preversion": "yarn test",
     "publish-to-npm": "publish",
+    "sourcemap": "source-map-explorer ./lib/wiki-editor.js",
     "test": "jest",
     "version": "yarn build && git add -A ./lib",
-    "watch": "SOURCEMAP=true yarn prebuild && (yarn-watch-css & yarn webpack --watch)",
+    "watch": "yarn prebuild && (yarn-watch-css & SOURCEMAP=true yarn webpack --watch)",
     "watch-css": "nodemon --watch ./source -e scss --exec 'yarn build-css'"
   },
   "pre-commit": [
     "test"
-  ],
-  "jest": {}
+  ]
 }
