--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-jest": "^20.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-jest": "^21.2.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.0.0",
     "eslint-config-airbnb": "^15.0.1",
