--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "slate": "^0.31.7",
-    "slate-auto-replace": "^0.9.0"
+    "slate-auto-replace": "^0.9.0",
+    "slate-html-serializer": "^0.4.15",
+    "slate-react": "^0.10.22"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
